# fastapi-sessions

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  readme.md  setup.py  sitemap.xml
docs/: index.md  installation.md  sessions.md
docs/example_app/: app.py
docs/guide/: backends.md  cookies.md  getting_started.md  sessions.md  usage.md
example_app/: app.py
examples/: basic.py  basic_redis.py  readme.md
fastapi_sessions/: __init__.py  session.py  session_cookie.py  session_verifier.py  session_wrapper.py
fastapi_sessions/authentication/: __init__.py  session_api.py  session_cookie.py  session_wrapper.py
fastapi_sessions/backends/: __init__.py  in_memory_backend.py  session_backend.py
fastapi_sessions/backends/implementations/: __init__.py  in_memory_backend.py
fastapi_sessions/frontends/: session_frontend.py
fastapi_sessions/frontends/implementations/: __init__.py  cookie.py  header.py
fastapi_sessions/typings/: __init__.py
guide/backends/: index.html
guide/cookies/: index.html
guide/getting_started/: index.html
guide/sessions/: index.html
guide/usage/: index.html
installation/: index.html
search/: search_index.json
sessions/: index.html
tests/: __init__.py  basic.py  test_session_wrapper.py
