[tool.poetry]
name = "fastapi-sessions"
version = "0.3.2"
license = "MIT"
description = "Ready-to-use session library for FastAPI"
authors = ["Jordan Isaacs"]
keywords = ["sessions", "cookies", "authorization", "fastapi"]
readme = "readme.md"
homepage = "https://github.com/jordanisaacs/fastapi-sessions"
documentation = "https://jordanisaacs.github.io/fastapi-sessions/"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Session"
]
include = [
  "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
fastapi = "^0"
itsdangerous = "^2.0.1"

mkdocs-material = { version = "^7.1.0", optional = true }
markdown-include = { version = "^0.6.0", optional = true }

flake8 = { version = "^3.9.0", optional = true }
flake8-docstrings = { version = "^1.6.0", optional = true }
black = {version = "^20.8b1", optional = true }
uvicorn = { version = "^0.14.0", optional = true }
pytest = {version = "^6.2.3", optional = true }
isort = {version = "^5.9.3", optional = true }

[tool.poetry.extras]
docs = ["mkdocs-material", "markdown-include"]
dev = ["flake8", "black", "flake8-docstrings", "uvicorn", "pytest", "isort" ]
